--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.9",
-    "date-fns": "^4.1.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,7 +16,9 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
